[package]
authors = ["Dylan Ede <dylanede@googlemail.com>"]
name = "vulkan-malloc"
version = "0.1.6-pre"
description = """
A general purpose device memory allocator for Vulkan
\
"""
documentation = "https://docs.rs/vulkan-malloc"
repository = "https://github.com/dylanede/vulkan-malloc"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["vulkan", "memory", "allocator", "malloc", "gpu"]

[dependencies]
dacite = "^0.7"
array_ext = "^0.2"
option-filter = "1.0"

[package.metadata.release]
pre-release-commit-message = "Release {{version}} 🎉🎉"
pre-release-replacements = [ {file="README.md", search='vulkan-malloc = "[a-z0-9\\.-]+"', replace='vulkan-malloc = "{{version}}"'}]